--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
     <!-- /.trends -->
     <section class="reviews">
       <div class="container container-reviews">
-        <h3>
+        <h3 class="reviews-title">
           <img
             src="img/quote-left.svg"
             alt="Slider: quote"
@@ -1284,8 +1284,8 @@
       <div class="newsletter-title">
         <h3 class="newsletter-title-header" lang="en">Подпишитесь</h3>
         <span class="newsletter-title-text"
-          >Напишите свой адрес электронной почты. Мы будем присылать вам новости
-          из мира моды.</span
+          >Напишите свой адрес электронной почты.<br />
+          Мы будем присылать вам новости из мира моды.</span
         >
       </div>
       <!-- /.newsletter-title -->
@@ -1296,8 +1296,8 @@
           class="form subscribe newsletter__subscribe"
         >
           <div class="subscribe__input-group">
-            <svg class="icon">
-              <use xlink:href="#email"></use>
+            <svg class="icon subscribe__input-icon">
+              <use xlink:href="img/icons.svg#email"></use>
             </svg>
             <input
               type="email"
@@ -1306,8 +1306,8 @@
               name="email"
               required
             />
+            <button class="subscribe__button" type="submit">Подписаться</button>
           </div>
-          <button class="subscribe__button" type="submit">Подписаться</button>
         </form>
       </div>
       <!-- /.newsletter-block -->
@@ -1315,6 +1315,8 @@
     <!-- /.newsletter -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
