added: footer&adaptive layout 1440px

--- a/index.html
+++ b/index.html
@@ -1319,6 +1319,108 @@
       <!-- /.newsletter-block -->
     </section>
     <!-- /.newsletter -->
+    <section class="footer">
+      <div class="container container-footer">
+        <div class="footer-wrapper">
+          <div class="footer-block footer-block-logo">
+            <a href="index.html" class="logo">
+              <img
+                src="img/ehya-logo.svg"
+                alt="Logo: Ehya"
+                class="logo__image"
+              />
+            </a>
+            <span class="footer-block-logo__text"
+              >Интернет-магазин брендовой<br />одежды с оплатой онлайн</span
+            >
+            <div class="footer-block-logo__network">
+              <a
+                href="https://google.com/"
+                class="footer__link"
+                target="_blank"
+              >
+                <svg class="footer-block-logo__icon">
+                  <use xlink:href="img/icons.svg#google"></use>
+                </svg>
+              </a>
+              <a
+                href="https://twitter.com/"
+                class="footer__link"
+                target="_blank"
+              >
+                <svg class="footer-block-logo__icon">
+                  <use xlink:href="img/icons.svg#twitter"></use>
+                </svg>
+              </a>
+              <a
+                href="https://www.instagram.com/"
+                class="footer__link"
+                target="_blank"
+              >
+                <svg class="footer-block-logo__icon">
+                  <use xlink:href="img/icons.svg#instagram"></use>
+                </svg>
+              </a>
+              <a
+                href="https://linkedin.com/"
+                class="footer__link"
+                target="_blank"
+              >
+                <svg class="footer-block-logo__icon">
+                  <use xlink:href="img/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </div>
+            <!-- /.footer-logo-network -->
+          </div>
+          <!-- /.footer-block-logo -->
+
+          <div class="footer-block footer-block-navigation">
+            <span class="footer-block-title">Навигация</span>
+            <ul class="footer-block-menu">
+              <li class="footer-block-menu__item">Новая коллекция</li>
+              <li class="footer-block-menu__item">Трендовая одежда</li>
+              <li class="footer-block-menu__item">Истории Fashun</li>
+              <li class="footer-block-menu__item">Отзывы клиентов</li>
+              <li class="footer-block-menu__item">Вся одежда</li>
+            </ul>
+          </div>
+          <!-- /.footer-block -->
+          <div class="footer-block footer-block-service">
+            <span class="footer-block-title">Сервисы</span>
+            <ul class="footer-block-menu">
+              <li class="footer-block-menu__item">Рассрочка на 6 мес</li>
+              <li class="footer-block-menu__item">Кредит на 12 мес</li>
+              <li class="footer-block-menu__item">Доставка по РФ</li>
+              <li class="footer-block-menu__item">Возврат покупок</li>
+              <li class="footer-block-menu__item">Акции и кэшбек</li>
+            </ul>
+          </div>
+          <!-- /.footer-block -->
+          <div class="footer-block footer-block-company">
+            <span class="footer-block-title">Компания</span>
+            <ul class="footer-block-menu">
+              <li class="footer-block-menu__item">Об Ehya</li>
+              <li class="footer-block-menu__item">Правила сайта</li>
+              <li class="footer-block-menu__item">Обработка данных</li>
+              <li class="footer-block-menu__item">Вакансии</li>
+            </ul>
+          </div>
+          <!-- /.footer-block -->
+          <div class="footer-block footer-block-contact">
+            <span class="footer-block-title">Контакты</span>
+            <ul class="footer-block-menu">
+              <li class="footer-block-menu__item">Группа Фейсбук</li>
+              <li class="footer-block-menu__item">Канал Youtube</li>
+            </ul>
+          </div>
+          <!-- /.footer-block -->
+        </div>
+        <!-- /.footer-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.footer -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
