--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,8 @@
       </div>
     </section>
     <!-- /.reviews -->
+    <div class="line"></div>
+    <!-- /.line -->
     <section class="history">
       <div class="container container-history">
         <div class="history-info">
@@ -1056,10 +1058,10 @@
         </div>
         <!-- /.history-info -->
         <div class="history-cards">
-          <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! HISTORY SLIDER 1 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
-          <div class="swiper-container history-slider">
+          <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! HISTORY SLIDER !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+          <div class="swiper-container swiper-container-narrow">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
+              <div class="swiper-slide swiper-slide-narrow">
                 <div class="history-cards__item">
                   <img
                     src="img/history-image-1-1440.jpg"
@@ -1085,8 +1087,6 @@
                   <!-- /.history-cards__legend -->
                 </div>
                 <!-- /.history-cards__item -->
-              </div>
-              <div class="swiper-slide">
                 <div class="history-cards__item">
                   <img
                     src="img/history-image-2-1440.jpg"
@@ -1113,7 +1113,7 @@
                 </div>
                 <!-- /.history-cards__item -->
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide swiper-slide-narrow">
                 <div class="history-cards__item">
                   <img
                     src="img/history-image-3.jpg"
@@ -1137,8 +1137,6 @@
                   <!-- /.history-cards__legend -->
                 </div>
                 <!-- /.history-cards__item -->
-              </div>
-              <div class="swiper-slide">
                 <div class="history-cards__item">
                   <img
                     src="img/history-image-4.jpg"
@@ -1163,109 +1161,96 @@
                 </div>
                 <!-- /.history-cards__item -->
               </div>
-            </div>
-          </div>
-          <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! HISTORY SLIDER 2 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
-          <div class="swiper-container history-slider-narrow">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide swiper-slide-history">
+              <div class="swiper-slide swiper-slide-narrow">
                 <div class="history-cards__item">
                   <img
-                    src="img/history-image-3.jpg"
+                    src="img/history-image-5.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--wide"
                   />
                   <img
-                    src="img/history-image-3.jpg"
+                    src="img/history-image-5.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--normal"
                   />
                   <img
-                    src="img/history-image-3.jpg"
+                    src="img/history-image-5.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--narrow"
                   />
                   <div class="history-cards__legend">
-                    <p class="history-cards-title" lang="en">Card 3</p>
+                    <p class="history-cards-title" lang="en">Card 5</p>
+                    <a href="#" class="history-cards-more">Читать далее</a>
+                  </div>
+                  <!-- /.history-cards__legend -->
+                </div>
+                <!-- /.history-cards__item -->
+                <div class="history-cards__item">
+                  <img
+                    src="img/history-image-6.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--wide"
+                  />
+                  <img
+                    src="img/history-image-6.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--normal"
+                  />
+                  <img
+                    src="img/history-image-6.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--narrow"
+                  />
+                  <div class="history-cards__legend">
+                    <p class="history-cards-title" lang="en">Card 6</p>
                     <a href="#" class="history-cards-more">Читать далее</a>
                   </div>
                   <!-- /.history-cards__legend -->
                 </div>
                 <!-- /.history-cards__item -->
               </div>
-              <div class="swiper-slide swiper-slide-history">
+              <div class="swiper-slide swiper-slide-narrow">
                 <div class="history-cards__item">
                   <img
-                    src="img/history-image-1-1440.jpg"
+                    src="img/history-image-7.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--wide"
                   />
                   <img
-                    src="img/history-image-1-768.jpg"
+                    src="img/history-image-7.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--normal"
                   />
                   <img
-                    src="img/history-image-1-320.jpg"
+                    src="img/history-image-7.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--narrow"
                   />
                   <div class="history-cards__legend">
-                    <p class="history-cards-title" lang="en">
-                      Mix & Match Style 01: повседневный и формальный стиль
-                    </p>
+                    <p class="history-cards-title" lang="en">Card 7</p>
                     <a href="#" class="history-cards-more">Читать далее</a>
                   </div>
                   <!-- /.history-cards__legend -->
                 </div>
                 <!-- /.history-cards__item -->
-              </div>
-              <div class="swiper-slide swiper-slide-history">
                 <div class="history-cards__item">
                   <img
-                    src="img/history-image-2-1440.jpg"
+                    src="img/history-image-8.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--wide"
                   />
                   <img
-                    src="img/history-image-2-768.jpg"
+                    src="img/history-image-8.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--normal"
                   />
                   <img
-                    src="img/history-image-2-320.jpg"
+                    src="img/history-image-8.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--narrow"
                   />
                   <div class="history-cards__legend">
-                    <p class="history-cards-title" lang="en">
-                      Лайфхак: Купите одежду Thrifft на воскресном рынке
-                    </p>
-                    <a href="#" class="history-cards-more">Читать далее</a>
-                  </div>
-                  <!-- /.history-cards__legend -->
-                </div>
-                <!-- /.history-cards__item -->
-              </div>
-              <div class="swiper-slide swiper-slide-history">
-                <div class="history-cards__item">
-                  <img
-                    src="img/history-image-4.jpg"
-                    alt="history card image"
-                    class="history-cards__image history-cards__image--wide"
-                  />
-                  <img
-                    src="img/history-image-4.jpg"
-                    alt="history card image"
-                    class="history-cards__image history-cards__image--normal"
-                  />
-                  <img
-                    src="img/history-image-4.jpg"
-                    alt="history card image"
-                    class="history-cards__image history-cards__image--narrow"
-                  />
-                  <div class="history-cards__legend">
-                    <p class="history-cards-title" lang="en">Card 4</p>
+                    <p class="history-cards-title" lang="en">Card 8</p>
                     <a href="#" class="history-cards-more">Читать далее</a>
                   </div>
                   <!-- /.history-cards__legend -->
@@ -1335,9 +1320,9 @@
                 class="logo__image"
               />
             </a>
-            <span class="footer-block-logo__text"
-              >Интернет-магазин брендовой<br />одежды с оплатой онлайн</span
-            >
+            <h3 class="footer-block-logo__text">
+              Интернет-магазин брендовой<br />одежды с оплатой онлайн
+            </h3>
             <div class="footer-block-logo__network">
               <a
                 href="https://google.com/"
