added: fixed errors

--- a/thankyou.html
+++ b/thankyou.html
@@ -83,10 +83,10 @@
         <div class="thanks-info">
           <div class="thanks-info__text">
             <div class="thanks-wrapper">
-              <h1 class="thanks-name thanks-info__name">Subscribed!</h1>
+              <h1 class="thanks-name thanks-info__name">Message sent!</h1>
             </div>
             <p class="thanks-description thanks-info__description">
-              Now you will receive informational messages from our company.
+              Our manager will call you in 5 minutes.
             </p>
             <button
               class="button button__home"
