--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="#" class="navbar-menu__link">Контакты</a>
               </li>
             </ul>
-            <a href="#" class="navbar-exit">Выйти</a>
+            <button data-toggle="modal" class="navbar-exit">Войти</button>
           </div>
           <!-- /.navbar-menu -->
           <button class="menu-button navbar-top__menu-button">
@@ -100,7 +100,9 @@
             и обновлять свой стиль. Всё это вы можете найти здесь. Начните
             сейчас.
           </p>
-          <button class="main-button">Подобрать одежду</button>
+          <button data-toggle="modal" class="main-button">
+            Подобрать одежду
+          </button>
           <ul class="main-menu">
             <li class="main-menu__item">
               <a href="" class="main-menu__link">
@@ -1411,6 +1413,62 @@
       <!-- /.container -->
     </section>
     <!-- /.footer -->
+    <div class="modal">
+      <div class="modal__overlay"></div>
+      <!-- /.modal__overlay -->
+      <div class="modal__dialog">
+        <a href="#" class="modal__close">
+          <img
+            src="img/close.svg"
+            alt="Icon: close"
+            class="modal__close-image"
+          />
+        </a>
+        <h3 class="modal__title modal__title--mb-4">Booking</h3>
+        <form action="send.php" method="POST" class="form modal__form">
+          <div class="modal__input-group">
+            <input
+              type="text"
+              class="input modal__input"
+              placeholder="Your Full Name*"
+              name="name"
+              required
+              minlength="2"
+            />
+          </div>
+          <div class="modal__input-group">
+            <input
+              type="tel"
+              class="input modal__input phoneInput"
+              placeholder="Phone Number*"
+              name="phone"
+              required
+            />
+          </div>
+          <div class="modal__input-group">
+            <input
+              type="email"
+              class="input modal__input"
+              placeholder="Your Email*"
+              name="email"
+              required
+            />
+          </div>
+          <textarea
+            cols="30"
+            rows="10"
+            class="message modal__message"
+            placeholder="Message"
+            name="message"
+          ></textarea>
+          <button class="button modal__button" type="submit">Send</button>
+          <span class="modal__info">* Required Fields</span>
+        </form>
+      </div>
+      <!-- /.modal__dialog -->
+    </div>
+    <!-- /.modal -->
+
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
