--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
               <a href="#" class="navbar-menu__link">Контакты</a>
             </li>
             <li class="navbar-menu__item">
-              <a href="#" class="navbar-menu__link navbar-exit">Выйти</a>
+              <a
+                href="#"
+                data-toggle="modal"
+                class="navbar-menu__link navbar-exit"
+                >Войти</a
+              >
             </li>
           </ul>
           <!-- /.navbar-menu -->
@@ -1424,7 +1429,7 @@
             class="modal__close-image"
           />
         </a>
-        <h3 class="modal__title modal__title--mb-4">Booking</h3>
+        <h3 class="modal__title modal__title--mb-4">Contact us</h3>
         <form action="send.php" method="POST" class="form modal__form">
           <div class="modal__input-group">
             <input
