added: adaptive layout fixed

--- a/index.html
+++ b/index.html
@@ -984,9 +984,7 @@
                 <p class="reviews-slider__text">
                   Далеко-далеко за словесными горами в стране гласных и
                   согласных живут рыбные тексты. Города, ведущими по всей
-                  заголовок пор первую всемогущая толку пояс агентство строчка
-                  курсивных безопасную заглавных семантика переписывается
-                  буквоград дорогу?
+                  заголовок переписывается буквоград дорогу?
                 </p>
                 <span class="reviews-slider__sign">
                   Валерия Сурикат - клиент Fashun
@@ -1000,8 +998,7 @@
                   Далеко-далеко за словесными горами в стране гласных и
                   согласных живут рыбные тексты. Букв единственное ты образ
                   рыбного бросил, злых по всей пор. Правилами океана там точках
-                  предупредила знаках! Ты продолжил, рукопись пустился собрал
-                  возвращайся жизни домах!
+                  предупредила знаках!
                 </p>
                 <span class="reviews-slider__sign">
                   Евгения Бобер - клиент Fashun
