added: error fixed

--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
       </div>
       <!-- /.container -->
       <div id="top">
-        <img src="img/upbutton.svg" width="30px" height="30px" />
+        <img src="img/upbutton.svg" class="top" alt="Button: top" />
       </div>
     </section>
     <!-- /.footer -->
