--- a/thanksubscribe.html
+++ b/thanksubscribe.html
@@ -97,7 +97,7 @@
                 alt="Icon: home"
                 class="button__home-image"
               />
-              Home
+              Вернуться
             </button>
           </div>
           <!-- /.hotel-info__text -->
